--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ test = ["matplotlib", "pytest", "pytest-mock", "flaky"]
 [project.entry-points."pennylane.io"]
 
 [tool.setuptools]
-packages = ["pennylane_snowflurry", "pennylane_snowflurry.measurements", "pennylane_snowflurry.API", "pennylane_snowflurry.processing", "pennylane_snowflurry.processing.steps", "pennylane_snowflurry.processing.config", "pennylane_snowflurry.processing.interfaces"]
+packages = ["pennylane_snowflurry", "pennylane_snowflurry.measurements", "pennylane_snowflurry.utility", "pennylane_snowflurry.API", "pennylane_snowflurry.processing", "pennylane_snowflurry.processing.steps", "pennylane_snowflurry.processing.config", "pennylane_snowflurry.processing.interfaces"]
 
 [tool.setuptools.dynamic]
 version = { attr = "pennylane_snowflurry._version.__version__" }
