--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pennylane-calculquebec"
 dynamic = ["version"]
 requires-python = ">=3.10"
 dependencies = ["numpy", "juliacall >= 0.9.0", "pennylane >= 0.30.0", "networkx >= 3.3"]
-description = "PennyLane plugin enabling access to quantum computers managed by Calcul Québec"
+description = "Pennylane plugin enabling seamless job execution on MonarQ, Calcul Québec’s nonprofit-hosted quantum computer"
 readme = "README.md"
 maintainers = [
     { name = "Calcul Québec", email = "support@tech.alliancecan.ca" },
