--- a/.github/workflows/python-publish-testpypi.yml
+++ b/.github/workflows/python-publish-testpypi.yml
@@ -8,11 +8,10 @@
 
 # This workflow has yet to be tested
 
-name: Upload Python Package to PyPI
+name: Upload Python Package to TestPyPI
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -43,13 +42,13 @@ jobs:
 
 
   release-on-pypi:
-    name: Release distribution packages on PyPI
+    name: Release distribution packages on TestPyPI
     needs:
     - build
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-    environment: release
+    environment: testpypi
 
     steps:
       - name: Download the distribution packages
@@ -59,3 +58,5 @@ jobs:
           path: dist/
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          url: https://test.pypi.org/legacy/
