--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 *.egg-info
 *.pyc
-*.vscode
+.vscode/*
 .benchmarks/*
 dist/*
 docs/_build/*
 build
 __pycache__/
 *.whl
+.coverage*
+.xml
+.env
+.vs/*
