--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-# TODO Need to look into the installation of dependencies from the pyproject.toml
+          # Install package and dependencies from pyproject.toml
+          pip install -e .[test]
 
       - name: Run unit tests with pytest
         run: |
