added `.toml` files to triggering files for test workflow

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -11,6 +11,7 @@ on:
       - ".github/workflows/unit-tests.yaml" # Trigger on changes to this workflow file
       - "pennylane_calculquebec/**"
       - "tests/**"
+      - "*.toml"
 
 jobs:
   unit-tests:
