--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,12 +1,9 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
+# This workflow will upload a Python Package to PyPI when a release is published.
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
-# This workflow has yet to be tested
 
 name: Upload Python Package to PyPI
 
@@ -20,7 +17,7 @@ permissions:
 
 jobs:
   build:
-    name: Build the disctribution package
+    name: Build the distribution package
     runs-on: ubuntu-latest
 
     steps:
