--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "setuptools-scm"]
+requires = ["setuptools>=80", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -55,8 +55,8 @@ packages = [
     "pennylane_calculquebec.processing.interfaces",
 ]
 
-[tool.setuptools.dynamic]
-version = { attr = "pennylane_calculquebec._version.__version__" }
+[tool.setuptools_scm]
+version_file = "pennylane_calculquebec/_version.py"
 
 [tool.tox]
 legacy_tox_ini = """
